refactor(jwt): STATELESS: update JWT utility class and implement secure cookie-based authentication